# mltoolbox

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/source/: mltoolbox.anomaly_detection.rst  mltoolbox.latent_space.rst  mltoolbox.rst
mltoolbox/: __init__.py  base_model.py  comp_stats.py  exceptions.py  keras.py  sklearn_extensions.py  time_series.py  training.py
mltoolbox/anomaly_detection/: __init__.py  _anomaly_detection.py  _core.py  anomaly_detection.py  exceptions.py
mltoolbox/latent_space/: __init__.py  _core.py  _latent_space.py  config.py  latent_space.py
tests/: test_anomaly_detector.py  test_comp_stats.py  test_latent_space.py  test_time_series.py
